--- a/my-app/src/Home_pageCSS/Main.css
+++ b/my-app/src/Home_pageCSS/Main.css
@@ -10,7 +10,7 @@
     padding-top: -200px;
 }
 
-.grid{
+.container2 .grid{
     margin: 80px;
     grid-template-columns: repeat(3,1fr);
     display: grid;
@@ -48,7 +48,7 @@
     background: linear-gradient(to right, #f030a7,#f03061,#f03061);
     border-radius: 3px;
     border: none;
-    color: white;
+    /* color: white; */
     padding: 10px;
     width: 100%;
     font-weight: 600;
