--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -106,3 +106,13 @@ ul{
     margin-right: 6.5em!important;
 }
 
+ul{
+
+    margin: 0px;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+     padding-left: 0px;
+    }
