--- a/my-app/src/Home_pageCSS/Header_auth.css
+++ b/my-app/src/Home_pageCSS/Header_auth.css
@@ -1,75 +1,79 @@
-.header_auth{
+.header_auth {
     display: block;
 }
+
+
 /*header*/
 
-.px-2 {
+.header_auth .px-3 {
     padding-right: .5rem!important;
     padding-left: .5rem!important;
 }
 
-.text-white{
+.text-white {
     color: #FFF!important;
 }
 
-.bg-dark{
+.bg-dark {
     background-color: #212529;
 }
 
-.container_auth{
+.container_auth {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
 }
 
-.align-items-center{
+.align-items-center {
     align-items: center!important;
 }
 
-.justify-content-center{
+.justify-content-center {
     justify-content: center!important;
 }
 
-.flex-wrap{
+.flex-wrap {
     flex-wrap: wrap!important;
 }
 
-.d-flex{
+.d-flex {
     display: flex!important;
 }
 
-.text-decoration-none{
+.text-decoration-none {
     text-decoration: none!important;
 }
 
-.my-2{
+.my-2 {
     margin-top: .5rem!important;
     margin-bottom: .5rem!important;
 }
 
-.bi{
+.bi {
     vertical-align: -.125em;
     fill: currentColor;
 }
 
-.me-2{
+.me-2 {
     margin-right: .5rem!important;
 }
 
-svg:not(:root){
+svg:not(:root) {
     overflow: hidden;
 }
 
-:not(svg){
+:not(svg) {
     transform-origin: 0px 0px;
 }
 
+
 /*Bar-----------*/
-.text-small{
+
+.text-small {
     font-size: 85%;
 }
 
-.nav{
+.nav {
     display: flex;
     flex-wrap: wrap;
     padding-left: 0;
@@ -77,86 +81,84 @@ svg:not(:root){
     list-style: none;
 }
 
-.nav > li{
+.nav>li {
     position: relative;
     display: block;
     padding-top: 10px;
 }
-@media (min-width:768px)
-{
-    .mb-md-0{
+
+@media (min-width:768px) {
+    .mb-md-0 {
         margin-top: 0!important;
-        margin-bottom: 0!important;    
+        margin-bottom: 0!important;
     }
 }
 
-.mb-2{
+.mb-2 {
     margin-bottom: 5rem!important;
 }
-    
-.col-12{
+
+.col-12 {
     flex: 0 0 auto;
     width: 70%;
 }
 
-
-
-
-.text-secondary{
+.text-secondary {
     color: #6c757d!important;
 }
 
-.nav-link{
+.nav-link {
     display: block;
     padding: .5rem 1rem;
     text-decoration: none;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
 }
 
-.bi{
+.bi {
     vertical-align: -.125em;
     fill: currentColor;
 }
 
-li{
+li {
     text-align: -webkit-match-parent;
 }
 
-.mb-3{
+.mb-3 {
     margin-bottom: 1rem!important;
 }
 
-.mx-auto{
+.mx-auto {
     margin-right: auto!important;
     margin-left: auto!important;
 }
 
-.d-block{
+.d-block {
     display: block!important;
 }
 
-::after,::before{
+::after,
+::before {
     box-sizing: border-box;
 }
 
-svg{
+svg {
     vertical-align: middle;
 }
 
-div{
+div {
     display: block;
 }
 
-.border-bottom{
+.border-bottom {
     border-bottom: 1px solid #dee2a6!important;
 }
 
-form{
+form {
     display: block;
     margin-top: 0em;
 }
 
-.form-control{
+.form-auth-control {
     display: block;
     width: 100%;
     padding: .375rem .75rem;
@@ -171,5 +173,5 @@ form{
     -webkit-appearance: none;
     -moz-appearance: none;
     border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
