--- a/my-app/src/Home_pageCSS/Products.css
+++ b/my-app/src/Home_pageCSS/Products.css
@@ -1,5 +1,4 @@
-
-.container-title .popular-product{
+.container-title .popular-product {
     font-size: 35px;
     font-weight: bold;
     text-align: left;
@@ -8,24 +7,25 @@
     max-width: 300px;
     color: black;
 }
-.container-title{
+
+.container-title {
     background-color: whitesmoke;
 }
+
 .product-list {
     padding: 3em;
     max-width: auto;
     max-height: auto;
-    grid-template-columns: repeat(4, 310px);
+    grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(4, 1fr);
     display: grid;
     grid-gap: 50px;
     align-items: center;
     margin-bottom: 2em;
     background-color: whitesmoke;
+}
 
-}   
-
-.product-list .card{
+.product-list .card {
     background-color: white;
     border-radius: 10px;
     padding: 1em;
@@ -34,33 +34,31 @@
     transition: 0.5s;
     animation-timing-function: ease-in-out;
     animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-
 }
-.product-list > .card:hover{
+
+.product-list>.card:hover {
     transform: translateY(-1em);
     box-shadow: 2px 2px 6px 2px;
     cursor: pointer;
 }
 
-
-
-h5{
+h5 {
     font-size: 20px;
     font-weight: bold;
 }
 
-.card img{
+.card img {
     max-width: 50%;
 }
 
-.card .text{
+.card .text {
     text-align: center;
     font-weight: bold;
-    font-size: 16px;    
+    font-size: 16px;
 }
 
-.btbuy{
-    background: linear-gradient(to right, #f030a7,#f03061,#f03061);
+.btbuy {
+    background: linear-gradient(to right, #f030a7, #f03061, #f03061);
     border-radius: 3px;
     border: none;
     color: white;
@@ -69,30 +67,27 @@ h5{
     margin: auto;
     font-weight: bold;
     text-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
-
 }
 
-.btbuy:hover{
+.btbuy:hover {
     color: black;
     cursor: pointer;
     background: linear-gradient(to right, lightblue, cyan, blue);
 }
 
-@media (max-width: 768px){
-    .product-list{
-        grid-template-columns: repeat(2,1fr);
+@media (max-width: 768px) {
+    .product-list {
+        grid-template-columns: repeat(2, 1fr);
         margin-bottom: 45cm;
-
     }
-
-    .btbuy{
+    .btbuy {
         font-size: 12px;
     }
 }
 
-@media (max-width: 500px){
-    .product-list{
-        grid-template-columns: repeat(1,1fr);
+@media (max-width: 500px) {
+    .product-list {
+        grid-template-columns: repeat(1, 1fr);
         margin-bottom: 125cm;
     }
 }
