--- a/my-app/src/Home_pageCSS/Header_auth.css
+++ b/my-app/src/Home_pageCSS/Header_auth.css
@@ -175,3 +175,23 @@ form {
     border-radius: .25rem;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
+
+.btn-log-out {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    background-color: transparent;
+    user-select: none;
+    cursor: pointer;
+    color: #212529;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
