--- a/my-app/src/Home_pageCSS/Popular_Laptop.css
+++ b/my-app/src/Home_pageCSS/Popular_Laptop.css
@@ -1,34 +1,32 @@
+.popular .container {
+  background-color: whitesmoke;
+}
 .product-list {
-    padding: 3em;
-    max-width: auto;
-    max-height: auto;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(1, 1fr);
-    display: grid;
-    grid-gap: 50px;
-    align-items: center;
-    margin-bottom: 2em;
-    background-color: whitesmoke;
-}
-
-.card img {
-    max-width: 50%;
+  padding: 3em;
+  max-width: auto;
+  max-height: auto;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  grid-gap: 50px;
+  align-items: center;
+  margin-bottom: 2em;
+  background-color: whitesmoke;
 }
 
 .card .text {
-    padding-top: 0.5em;
-    text-align: center;
-    font-weight: bold;
-    font-size: 16px;
-}
-
-.card img {
-    max-width: 50%;
+  padding-top: 0.5em;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .card .text {
-    padding-top: 0.5em;
-    text-align: center;
-    font-weight: bold;
-    font-size: 16px;
+  padding-top: 0.5em;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
+.popular .popular__product .slick-track {
+  width: 5800px !important;
 }
