--- a/my-app/src/Home_pageCSS/header.css
+++ b/my-app/src/Home_pageCSS/header.css
@@ -1,6 +1,8 @@
 header {
     display: block;
 }
+
+
 /*header*/
 
 .px-2 {
@@ -8,68 +10,70 @@ header {
     padding-left: .5rem!important;
 }
 
-.text-white{
+.text-white {
     color: #FFF!important;
 }
 
-.bg-dark{
-    background-color: #212529;
+.bg-dark {
+    background-color: #212529!important;
 }
 
-.container{
+.container {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
 }
 
-.align-items-center{
+.align-items-center {
     align-items: center!important;
 }
 
-.justify-content-center{
+.justify-content-center {
     justify-content: center!important;
 }
 
-.flex-wrap{
+.flex-wrap {
     flex-wrap: wrap!important;
 }
 
-.d-flex{
+.d-flex {
     display: flex!important;
 }
 
-.text-decoration-none{
+.text-decoration-none {
     text-decoration: none!important;
 }
 
-.my-2{
+.my-2 {
     margin-top: .5rem!important;
     margin-bottom: .5rem!important;
 }
 
-.bi{
+.bi {
     vertical-align: -.125em;
     fill: currentColor;
 }
 
-.me-2{
+.me-2 {
     margin-right: .5rem!important;
 }
 
-svg:not(:root){
+svg:not(:root) {
     overflow: hidden;
 }
 
-:not(svg){
+:not(svg) {
     transform-origin: 0px 0px;
 }
 
+
 /*Bar-----------*/
-.text-small{
+
+.text-small {
     font-size: 85%;
 }
 
-.nav{
+.nav {
     display: flex;
     flex-wrap: wrap;
     padding-left: 0;
@@ -77,86 +81,97 @@ svg:not(:root){
     list-style: none;
 }
 
-.nav > li{
+.nav>li {
     position: relative;
     display: block;
     padding-top: 10px;
 }
-@media (min-width:768px)
-{
-    .mb-md-0{
+
+@media (min-width:768px) {
+    .mb-md-0 {
         margin-top: 0!important;
-        margin-bottom: 0!important;    
+        margin-bottom: 0!important;
     }
 }
 
-.mb-2{
+.mb-2 {
     margin-bottom: 5rem!important;
 }
-    
-.col-12{
+
+.col-12 {
     flex: 0 0 auto;
     width: 70%;
 }
 
-
-
-
-.text-secondary{
-    color: #6c757d!important;
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    padding-left: 2rem;
 }
 
-.nav-link{
+.text-secondary {
+    color: gray!important;
+}
+
+.nav-link {
     display: block;
     padding: .5rem 1rem;
     text-decoration: none;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
 }
 
-.bi{
+.bi {
     vertical-align: -.125em;
     fill: currentColor;
 }
 
-li{
+li {
     text-align: -webkit-match-parent;
 }
 
-.mb-3{
+.mb-3 {
     margin-bottom: 1rem!important;
 }
 
-.mx-auto{
+.mx-auto {
     margin-right: auto!important;
     margin-left: auto!important;
 }
 
-.d-block{
+.d-block {
     display: block!important;
 }
 
-::after,::before{
+::after,
+::before {
     box-sizing: border-box;
 }
 
-svg{
+svg {
     vertical-align: middle;
 }
 
-div{
+div {
     display: block;
 }
 
-.border-bottom{
+.border-bottom {
     border-bottom: 1px solid #dee2a6!important;
 }
 
-form{
+form {
     display: block;
     margin-top: 0em;
 }
 
-.form-control{
+.form-control {
     display: block;
     width: 100%;
     padding: .375rem .75rem;
@@ -171,21 +186,19 @@ form{
     -webkit-appearance: none;
     -moz-appearance: none;
     border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
-.text-end{
+.text-end {
     text-align: right!important;
     padding-bottom: 10px;
 }
 
-.text-dark{
+.text-dark {
     color: #212529!important;
 }
 
-
-
-.btn{
+.btn {
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
@@ -202,7 +215,6 @@ form{
     color: #212529;
     -webkit-user-select: none;
     -moz-user-select: none;
-    
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
@@ -235,11 +247,11 @@ button {
     font: 400 13.3333px Arial;
 }
 
-a{
+a {
     color: white;
 }
 
-input{
+input {
     text-rendering: auto;
     letter-spacing: normal;
     word-spacing: normal;
@@ -258,12 +270,12 @@ input{
     border-image: initial;
 }
 
-.btn-outline-light{
+.btn-outline-light {
     color: #f8f9fa;
     border-color: #f8f9fa;
 }
 
-.btn-outline-light:hover{
+.btn-outline-light:hover {
     border-color: #f8f9fa;
     background-color: white;
 }
