--- a/my-app/src/components/Dashboard_page/Dashboard_page.css
+++ b/my-app/src/components/Dashboard_page/Dashboard_page.css
@@ -6,3 +6,8 @@
     box-sizing: border-box;
     border-bottom: 2px solid #b2b3;
 }
+
+.Dashboard_title .link__orders {
+    list-style: none;
+    text-decoration: none;
+}
