--- a/my-app/src/components/Dashboard_page/Total__orders/Total__orders.css
+++ b/my-app/src/components/Dashboard_page/Total__orders/Total__orders.css
@@ -1,6 +1,7 @@
 .Total__orders th {
     font-size: 20px;
     font-weight: 100;
+    text-align: center;
 }
 
 .Total__orders thead {
@@ -11,4 +12,8 @@
 
 .Total__orders tbody {
     font-size: 15px;
+}
+
+.Total__orders td {
+    text-align: center;
 }
