--- a/my-app/src/Home_pageCSS/Products.css
+++ b/my-app/src/Home_pageCSS/Products.css
@@ -45,12 +45,15 @@ h5 {
 
 .card img {
     max-width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 .card .text {
     text-align: center;
     font-weight: bold;
     font-size: 16px;
+    height: 100px;
 }
 
 .btbuy {
